--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Frontend Bootcamp</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
          <a href="#" class="navbar-brand">Frontend Bootcamp</a>   
 
@@ -35,6 +36,26 @@
         </div>
         
     </nav>
+
+    <!-- Showcase -->
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
+        <div class="container">
+            <div class="d-sm-flex align-items-center">
+                <div>
+                    <h1>
+                        Beocme a <span class="text-warning">Web developer</span>
+                    </h1>
+                    <p class="lead">
+                        We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them for their first dev role
+                    </p>
+                    <button class="btn btn-primary btn-lg">Start the Enrollment</button>
+                </div>
+                <img class="img-fluid w-50 d-none d-sm-block" src="/images/showcase.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
