--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
     <title>Frontend Bootcamp</title>
 </head>
@@ -38,7 +39,7 @@
     </nav>
 
     <!-- Showcase -->
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center">
                 <div>
@@ -51,6 +52,70 @@
                     <button class="btn btn-primary btn-lg">Start the Enrollment</button>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="/images/showcase.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="mb-3 mb-md-0">Sign Up for Our Newsletter</h3>
+
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Email" 
+                    >
+
+                    <button 
+                    class="btn btn-dark btn-lg"
+                     >
+                     Button
+                    </button>
+                  </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- boxes section -->
+    <section class="boxes p-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md">
+                    <div class="card-body bg-dark text-light">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-laptop"></i>
+                        </div>
+                        <h3 class="card-title mb-3">
+                            Virtual
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste fugiat dolores architecto nam autem et!</p>
+                         <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card-body bg-secondary text-light">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-person-square"></i>
+                        </div>
+                        <h3 class="card-title mb-3">
+                            Hybrid
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste fugiat dolores architecto nam autem et!</p>
+                         <a href="#" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card-body bg-dark text-light">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-people"></i>
+                        </div>
+                        <h3 class="card-title mb-3">
+                            In Person
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste fugiat dolores architecto nam autem et!</p>
+                         <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
