--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
          <a href="#" class="navbar-brand">Frontend Bootcamp</a>   
 
@@ -79,7 +79,7 @@
     <!-- boxes section -->
     <section class="boxes p-5">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center g-4">
                 <div class="col-md">
                     <div class="card-body bg-dark text-light">
                         <div class="h1 mb-3">
@@ -117,6 +117,134 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- Learn section -->
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="/images/fundamentals.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn the Fundamentals</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam soluta natus est amet et deserunt? Numquam at minus ipsam expedita?</p>
+
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolor labore omnis, aliquam odit delectus veritatis quisquam velit. Maxime dolor aliquid sequi. Quo, ab maxime ullam reiciendis aperiam aspernatur aliquam.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="learn" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam soluta natus est amet et deserunt? Numquam at minus ipsam expedita?</p>
+
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolor labore omnis, aliquam odit delectus veritatis quisquam velit. Maxime dolor aliquid sequi. Quo, ab maxime ullam reiciendis aperiam aspernatur aliquam.</p>
+                </div>
+                <div class="col-md">
+                    <img src="/images/react.svg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Question Accordion -->
+    <section id="questions" class="p-5">
+        <div class="container">
+            <h2 class="text-center mb-4">
+                Frequently asked Questions
+            </h2>
+            <div class="accordion accordion-flush" id="questions">
+                <!-- Item one -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" >
+                    <button class="accordion-button collapsed" type="button" 
+                    data-bs-toggle="collapse" data-bs-target="#question-one" >
+                      Where exactly are you located?
+                    </button>
+                  </h2>
+                  <div id="question-one" 
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#questions">
+                    <div class="accordion-body">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eligendi aut voluptatem quia dolore ratione quos placeat voluptate eos tenetur esse debitis corrupti dolores, officiis, facilis excepturi incidunt pariatur deleniti porro reiciendis similique rerum ad animi! Soluta repellat ipsa eius laboriosam ipsam, eveniet quaerat delectus dolores quod aliquam maxime. Laudantium!
+                    </div>
+                  </div>
+                </div>
+                <!-- Item Two -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" >
+                      <button class="accordion-button collapsed" type="button" 
+                      data-bs-toggle="collapse" data-bs-target="#question-two" >
+                        How much does it cost to attend?
+                      </button>
+                    </h2>
+                    <div id="question-two" 
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eligendi aut voluptatem quia dolore ratione quos placeat voluptate eos tenetur esse debitis corrupti dolores, officiis, facilis excepturi incidunt pariatur deleniti porro reiciendis similique rerum ad animi! Soluta repellat ipsa eius laboriosam ipsam, eveniet quaerat delectus dolores quod aliquam maxime. Laudantium!
+                      </div>
+                    </div>
+                  </div>
+                <!-- Item Three -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" >
+                      <button class="accordion-button collapsed" type="button" 
+                      data-bs-toggle="collapse" data-bs-target="#question-three" >
+                        What do I need to know ?
+                      </button>
+                    </h2>
+                    <div id="question-three" 
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eligendi aut voluptatem quia dolore ratione quos placeat voluptate eos tenetur esse debitis corrupti dolores, officiis, facilis excepturi incidunt pariatur deleniti porro reiciendis similique rerum ad animi! Soluta repellat ipsa eius laboriosam ipsam, eveniet quaerat delectus dolores quod aliquam maxime. Laudantium!
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Item Four -->
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" >
+                      <button class="accordion-button collapsed" type="button" 
+                      data-bs-toggle="collapse" data-bs-target="#question-four" >
+                        How do I sign up?
+                      </button>
+                    </h2>
+                    <div id="question-four" 
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eligendi aut voluptatem quia dolore ratione quos placeat voluptate eos tenetur esse debitis corrupti dolores, officiis, facilis excepturi incidunt pariatur deleniti porro reiciendis similique rerum ad animi! Soluta repellat ipsa eius laboriosam ipsam, eveniet quaerat delectus dolores quod aliquam maxime. Laudantium!
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Item Five -->
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" >
+                      <button class="accordion-button collapsed" type="button" 
+                      data-bs-toggle="collapse" data-bs-target="#question-five" >
+                        Will you help me find a job?
+                      </button>
+                    </h2>
+                    <div id="question-five" 
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eligendi aut voluptatem quia dolore ratione quos placeat voluptate eos tenetur esse debitis corrupti dolores, officiis, facilis excepturi incidunt pariatur deleniti porro reiciendis similique rerum ad animi! Soluta repellat ipsa eius laboriosam ipsam, eveniet quaerat delectus dolores quod aliquam maxime. Laudantium!
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </div>
+    </section>
+    <!-- Instructions -->
+    <section id="instructors" class="p-5">
+        <div class="container">
+            
         </div>
     </section>
 
